:sparkles: add roles CRUD
add CRUD of roles context
