# lib/getwork_web/controllers/role_controller.ex
@@ -7,27 +7,21 @@ defmodule GetworkWeb.RoleController do
   action_fallback GetworkWeb.FallbackController
 
   def index(conn, _params) do
-    {:ok, roles} = Roles.list_roles()
-    render(conn, "index.json", roles: roles)
+    with {:ok, roles} <- Roles.list_roles() do
+      render(conn, "index.json", roles: roles)
+    end
   end
 
   def create(conn, role_params) do
     with {:ok, %Role{} = role} <- Roles.create_role(role_params) do
       conn
       |> put_status(:created)
-      |> put_resp_header("location", Routes.role_path(conn, :show, role))
       |> render("show.json", role: role)
     end
   end
 
-  def show(conn, %{"id" => id}) do
-    with {:ok, role} <- Roles.get_role(id) do
-      render(conn, "show.json", role: role)
-    end
-  end
-
   def update(conn, role_params) do
-    with {:ok, %Role{} = role} <- Roles.update_role(role_params) do
+    with {:ok, %Role{} = role} <- Roles.update_role(role_params["id"], role_params) do
       render(conn, "show.json", role: role)
     end
   end
